<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashBoard">




    <fragment
        android:id="@+id/nav_dashBoard"
        android:name="com.plum.networkk.awmapplication.fragments.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />


    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.plum.networkk.awmapplication.fragments.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard_employer" />


    <fragment
        android:id="@+id/nav_profile"
        android:name="com.plum.networkk.awmapplication.fragments.EmployeeProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_employee_profile" />



    <fragment
        android:id="@+id/nav_help"
        android:name="com.plum.networkk.awmapplication.fragments.EmployeeHelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_employee_help" />


</navigation>