<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/MyThemeOverlay_Toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/Theme.AWMApplication.PopupOverlay">


        <RelativeLayout
            android:id="@+id/toolbarTextBtnLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible">

            <com.plum.networkk.awmapplication.utils.MyTextViewCustomGeneric
                android:id="@+id/toolbarTitleTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:textAllCaps="true"
                android:gravity="center"
                app:fontType="normal"
                android:paddingRight="?attr/actionBarSize"
                android:textColor="@color/app_green_color"
                android:textSize="@dimen/_16sdp"
                android:visibility="visible"
                tools:text="@string/menu_profile" />

            <com.plum.networkk.awmapplication.utils.MyTextViewCustomGeneric
                android:id="@+id/toolbarEditBtnTv"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:gravity="center|right"
                android:paddingRight="@dimen/_10sdp"
                android:text="@string/txt_edit"
                android:textAllCaps="true"
                android:textColor="@color/txt_color_gray_normal"
                android:textSize="@dimen/_12sdp"
                android:visibility="visible" />

        </RelativeLayout>


    </com.google.android.material.appbar.MaterialToolbar>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/businesSettingRecyclerView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/btnGoOnBreak"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineLayout"
            tools:itemCount="5"
            tools:listitem="@layout/item_list_business_setting" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <RelativeLayout
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:background="@color/app_green_color"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.plum.networkk.awmapplication.utils.MyTextViewCustomGeneric
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:text="@string/txt_save_changes"
            android:textAllCaps="true"
            android:textSize="@dimen/_12sdp"
            app:fontType="semi_bold" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>